# rrmi

./: .gitignore  Cargo.toml  get_liacs_traces.sh  run.sh
benches/: socket_benchmark.rs
example/: Cargo.toml
example/src/: lib.rs  main.rs  number_server.rs  utils.rs
rrmi/: Cargo.toml
rrmi-macros/: Cargo.toml
rrmi/benches/: socket_benchmark.rs
rrmi/src/: error.rs  lib.rs
rrmi/src/remote/: mod.rs  registry.rs  remote.rs  tests.rs
rrmi/src/stub/: mod.rs  serialization.rs  skeleton.rs  stub.rs
rrmi/src/transport/: mod.rs  tcp.rs  tests.rs  utils.rs
rrmi_macros/: Cargo.toml
rrmi_macros/src/: generators.rs  lib.rs  structure.rs  utils.rs
src/: error.rs  lib.rs  marshal.rs  registry.rs  remote.rs  skeleton.rs  stub.rs  tcp.rs  transport.rs
src/remote/: mod.rs  registry.rs
src/stub/: marshal.rs  mod.rs  serialization.rs  skeleton.rs  stub.rs
src/transport/: mod.rs  tcp.rs  utils.rs
