[package]
name = "rrmi"
version = "0.1.0"
edition = "2024"

[dependencies]
dns-lookup = "3.0.1"
if-addrs = "0.15.0"
serde = {version= "1.0.228", features=["derive"]}
serde_cbor = "0.11.2"
thiserror = "2.0.18"
threadpool = "1.8.1"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "socket_benchmark"
harness = false
required-features =["bench"]

[features]
bench = []
