[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
gethostname = "1.1.0"
rand = "0.10.1"
rrmi = { path = "../rrmi" }
rrmi_macros = { path = "../rrmi_macros" }
serde = "1.0.228"
thousands = "0.2"
tracing = { version = "0.1.44", optional = true }
tracing-chrome = { version = "0.7.2", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true }

[features]
tracing = [
    "dep:tracing",
    "dep:tracing-chrome",
    "dep:tracing-subscriber",
    "rrmi/tracing",
]
